--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+    <!-- file:///C:/Users/tucke/Documents/GitHub/angrycomet.github.io/index.html -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,13 +36,10 @@
             <h2>Making Game Development Easy</h2>
             <p>In order to teach you to make your own video games, this site has lots of tutorials to make just about any game possible.  The only limits are your imagination.  I, Tucker Sandin, have created every tutorial on this site as well as this site.  I learned Gamemaker, the game engine we will be using, from videos on the internet, much like you are right now.  I then learned web design in tenth grade at STMA Highschool.  </p>
         </div>
-        <img class="captionLogo" src="logo.png">
         <img src="binary.png" width="1920px">
         <!-- Body -->
-        <h1 class="bodyH1">Getting Started</h1>
+        <h1 class="bodyH1"><span class="coloredLeftLine">|</span>Getting Started</h1>
         <p class="bodyP">Before you can make games, you must get Gamemaker Studio and get everything setup.  You'll also need to learn some of the basics of Gamemaker as well.  Here's a short video to get you started.</p>
-        <video  class="centeredVideo" controls>
-            <source src="videos/getting_started.mp4" type="video/mp4">
-        </video>
+        <iframe class="centeredVideo" width="560" height="315" src="https://www.youtube.com/embed/3rafYHSX9Bs" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
