--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Angry Comet</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="contact-form.css">
+        <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="contact-form.css">
     </head>
     <body>
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
                 <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html"#"">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
                     <div class="dropDownContent">
-                        <a href="#">Link 1</a>
+                        <a href="top-down-rpg.html">Top Down RPG</a>
                         <a href="#">Link 2</a>
                         <a href="#">Link 3</a>
                     </div>
