--- a/top-down-rpg.html
+++ b/top-down-rpg.html
@@ -13,7 +13,7 @@
         <div class="navBarDiv">
             <ul>
                 <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
-                <li><a href="index.html"#"">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
                     <div class="dropDownContent">
@@ -38,7 +38,7 @@
         <div class="videoContainer">
             <div class="videoSelect">
                 <a href="#">
-                    <img src="Youtube/Thumbnails/Top DOwn RPG THumbnails/1.png" width="250px">
+                    <img src="channel/Thumbnails/Top DOwn RPG THumbnails/1.png" width="250px">
                 </a>
                 <div class="desc">
                     <a href="">Top Down RPG Tutorial [P1] Player, Walls, Movement</a>
