--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Angry Comet</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="contact-form.css">
         <link rel="stylesheet" href="homepage.css">
-        <link rel="stylesheet" href="contact-form.css">
     </head>
     <body>
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
                 <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
-                <li><a href="index.html"#"">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
                     <div class="dropDownContent">
                         <a href="top-down-rpg.html">Top Down RPG</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
                     </div>
                 </div>
                 <div class="dropDown">
@@ -32,12 +28,12 @@
                         <a href="#">Link 3</a>
                     </div>
                 </div>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <!-- Title Page Caption -->
         <div class="homePageCaption">
-            <h2>Making Game Development Easy</h2>
+            <h2 class="captionHeader">Making Game Development Easy</h2>
             <p>In order to teach you to make your own video games, this site has lots of tutorials to make just about any game possible.  The only limits are your imagination.  I, Tucker Sandin, have created every tutorial on this site as well as this site.  I learned Gamemaker, the game engine we will be using, from videos on the internet, much like you are right now.  I then learned web design in tenth grade at STMA Highschool.  </p>
         </div>
         <img src="binary.png" width="1920px">
@@ -45,24 +41,5 @@
         <h1 class="bodyH1"><span class="coloredLeftLine">|</span>Getting Started</h1>
         <p class="bodyP">Before you can make games, you must get Gamemaker Studio and get everything setup.  You'll also need to learn some of the basics of Gamemaker as well.  Here's a short video to get you started.</p>
         <iframe class="centeredVideo" width="560" height="315" src="https://www.youtube.com/embed/3rafYHSX9Bs" frameborder="0" allowfullscreen></iframe>
-        
-        <form class="contactForm" action="MAILTO:tucker.sandin@gmail.com" method="post">
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="Name: " />
-            </div>
-            <div>
-                <label for="mail">Email:</label>
-                <input type="email" id="mail" name="Email: " />
-            </div>
-            <div>
-                <label for="msg">Message:</label>
-                <textarea id="msg" name="Message:"></textarea>
-            </div>
-
-            <div class="button">
-                <button type="submit">Send your message</button>
-            </div>
-        </form>
     </body>
 </html>
