--- a/top-down-rpg.html
+++ b/top-down-rpg.html
@@ -18,8 +18,6 @@
                     <li><a href="#">Full Game Tutorials</a></li>
                     <div class="dropDownContent">
                         <a href="top-down-rpg.html">Top Down RPG</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
                     </div>
                 </div>
                 <div class="dropDown">
@@ -30,7 +28,7 @@
                         <a href="#">Link 3</a>
                     </div>
                 </div>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <!--Body -->
