--- a/top-down-rpg.html
+++ b/top-down-rpg.html
@@ -36,7 +36,7 @@
         <div class="videoContainer">
             <div class="videoSelect">
                 <a href="#">
-                    <img src="channel/Thumbnails/Top DOwn RPG Thumbnails/1.png" width="250px">
+                    <img src="channel/Thumbnails/Top Down RPG Thumbnails/1.png" width="250px">
                 </a>
                 <div class="desc">
                     <a href="">Top Down RPG Tutorial [P1] Player, Walls, Movement</a>
