added first video and pages for it

--- a/top-down-rpg-1.html
+++ b/top-down-rpg-1.html
@@ -6,12 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Angry Comet</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="video-select-page.css">
     </head>
     <body>
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
-                <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
+                <li><a href="index.html"><img class="headerLogo" src="images/logo.png"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
@@ -31,5 +32,19 @@
             </ul>
         </div>
         <!--Body -->
+        <h1 class="bodyH1"><span class="coloredLeftLine">|</span>Top Down RPG Tutorial [P1] Player, Movement, Walls</h1>
+        <div class="mainVideo">
+            <iframe  src="https://www.youtube.com/embed/wbQ64G5m-XQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="otherVideos">
+            <div class="videoSelect">
+                <a href="#">
+                    <img src="channel/Thumbnails/Top Down RPG Thumbnails/1.png" width="250px">
+                </a>
+                <div class="desc">
+                    <a href="">Top Down RPG Tutorial [P1] Player, Movement, Movement</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
