--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
-                <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
+                <li><a href="index.html"><img class="headerLogo" src="images/logo.png"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
