--- a/top-down-rpg.html
+++ b/top-down-rpg.html
@@ -12,7 +12,7 @@
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
-                <li><a href="index.html"><img class="headerLogo" src="logo.png"></a></li>
+                <li><a href="index.html"><img class="headerLogo" src="images/logo.png"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
@@ -35,11 +35,11 @@
         <h1 class="bodyH1"><span class="coloredLeftLine">|</span>Top Down RPG Tutorial Series</h1>
         <div class="videoContainer">
             <div class="videoSelect">
-                <a href="#">
+                <a href="top-down-rpg-1.html">
                     <img src="channel/Thumbnails/Top Down RPG Thumbnails/1.png" width="250px">
                 </a>
                 <div class="desc">
-                    <a href="">Top Down RPG Tutorial [P1] Player, Walls, Movement</a>
+                    <a href="top-down-rpg-1.html">Top Down RPG Tutorial [P1] Player, Movement, Movement</a>
                 </div>
             </div>
         </div>
