--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Angry Comet</title>
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="homepage.css">
     </head>
@@ -12,7 +13,7 @@
         <!-- Navigation Bar -->
         <div class="navBarDiv">
             <ul>
-                <li><a href="index.html"><img class="headerLogo" src="images/logo.png"></a></li>
+                <li><a href="index.html"><img class="headerLogo" src="images/logo thin.png"></a></li>
                 <li><a href="index.html">Home</a></li>
                 <div class="dropDown">
                     <li><a href="#">Full Game Tutorials</a></li>
